src/objects/Included_Function__c.object
<CustomObject>
    <description>This object is for the Project Central - Application Registry application and supports the &quot;Application&quot; object. This object tracks the functions each application has.</description>
    <fields>
        <fullName>Application_Function__c</fullName>
        <description>To view all Application Functions, Click on the Application Functions tab above</description>
        <inlineHelpText>To view all Application Functions, Right Click on the Application Functions tab above and Open in a New Tab</inlineHelpText>
        <label>Application Function</label>
        <referenceTo>Application_Function__c</referenceTo>
        <relationshipLabel>Included Functions</relationshipLabel>
        <relationshipName>Application_Version_Functions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <formula>HYPERLINK(Application_Version__r.Application__r.Id,Application_Version__r.Application__r.Name__c,&quot;_self&quot;)</formula>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Version__c</fullName>
        <label>Application Version</label>
        <referenceTo>Application_Version__c</referenceTo>
        <relationshipName>Application_Version_Functions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Function_Type__c</fullName>
        <formula>HYPERLINK(Application_Function__r.Id,Application_Function__r.Description__c,&quot;_self&quot;)</formula>
        <label>Function Type</label>
        <type>Text</type>
    </fields>
    <label>Included Function</label>
    <nameField>
        <displayFormat>AVF-{0000000}</displayFormat>
        <label>Included Function ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Included Functions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>